--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Outsource Your Other Tasks with Efficiency</h1>
-                    <p>Volume Architects helps you finish projects faster and more efficiently than ever before.</p>
+                    <p>Volume Architects is an architectural firm that specializes in architecture, design, consultation, planning, 3D visualization, and Building Information Modeling (BIM). We offer bespoke design solutions and strategies for residential, commercial, hospitality, and industrial buildings projects. Supplementing value proposition for clients spanning to Global market. By adapting, utilizing, harnessing state-of-the-art software, the capabilities of Artificial Intelligence (AI) tools, we continue to initiate projects that set prime standards in quality and innovation. </p>
                     <div class="hero-buttons">
                         <a href="#" class="btn-primary">Start Free Trial</a>
                         <a href="#" class="btn-secondary">Watch Demo</a>
@@ -571,27 +571,27 @@
                             <div class="dashboard-grid">
                                 <div class="dashboard-item">
                                     <i class="fas fa-chart-line"></i>
-                                    <span>Analytics</span>
+                                    <span>Architectural Design</span>
                                 </div>
                                 <div class="dashboard-item">
                                     <i class="fas fa-users"></i>
-                                    <span>Leads</span>
+                                    <span>Design Consultancy</span>
                                 </div>
                                 <div class="dashboard-item">
                                     <i class="fas fa-tasks"></i>
-                                    <span>Tasks</span>
+                                    <span>3D Modeling</span>
                                 </div>
                                 <div class="dashboard-item">
                                     <i class="fas fa-calendar"></i>
-                                    <span>Calendar</span>
+                                    <span>3D Visualization</span>
                                 </div>
                                 <div class="dashboard-item">
                                     <i class="fas fa-bolt"></i>
-                                    <span>Automation</span>
+                                    <span>BIM Modeling</span>
                                 </div>
                                 <div class="dashboard-item">
                                     <i class="fas fa-file-invoice"></i>
-                                    <span>Reports</span>
+                                    <span>Digital Twin</span>
                                 </div>
                             </div>
                         </div>
@@ -605,8 +605,8 @@
     <section class="features" id="features">
         <div class="container">
             <div class="section-header">
-                <h2>Powerful Features Designed for Sales Teams</h2>
-                <p>Volume Architects provides a comprehensive suite of tools to optimize your sales process and maximize conversion rates.</p>
+                <h2>Powerful Features Designed for Outsourcing</h2>
+                <p>Volume Architects provides a comprehensive suite of tools to optimize your architecture, design, consultation, planning, 3D visualization, and Building Information Modeling (BIM)</p>
             </div>
             <div class="features-grid">
                 <div class="feature-card">
@@ -614,15 +614,15 @@
                         <i class="fas fa-robot"></i>
                     </div>
                     <h3>AI-Powered Automation</h3>
-                    <p>Our intelligent system learns from your sales data to automate repetitive tasks and prioritize high-value leads.</p>
+                    <p>Our intelligent system learns from your architecture data to automate repetitive tasks and prioritize on key areas for your project management.</p>
                     <a href="#" class="btn-secondary">Learn More</a>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-funnel-dollar"></i>
                     </div>
-                    <h3>Sales Funnel Optimization</h3>
-                    <p>Visualize and optimize every stage of your sales funnel to increase conversions and reduce drop-offs.</p>
+                    <h3>Construction Optimization</h3>
+                    <p>Visualize and optimize every stage of your construction.</p>
                     <a href="#" class="btn-secondary">Learn More</a>
                 </div>
                 <div class="feature-card">
@@ -630,7 +630,7 @@
                         <i class="fas fa-comments"></i>
                     </div>
                     <h3>Smart Communication</h3>
-                    <p>Automated follow-ups, personalized messaging, and conversation analytics to improve engagement.</p>
+                    <p>Automated follow-ups, personalized messaging, and conversation analytics to improve engagement with clients.</p>
                     <a href="#" class="btn-secondary">Learn More</a>
                 </div>
                 <div class="feature-card">
@@ -654,7 +654,7 @@
                         <i class="fas fa-shield-alt"></i>
                     </div>
                     <h3>Enterprise Security</h3>
-                    <p>Bank-level security and compliance to protect your sensitive sales data and customer information.</p>
+                    <p>Bank-level security and compliance to protect your sensitive data and customer information.</p>
                     <a href="#" class="btn-secondary">Learn More</a>
                 </div>
             </div>
@@ -665,13 +665,13 @@
     <section class="testimonials" id="testimonials">
         <div class="container">
             <div class="section-header">
-                <h2>Trusted by Sales Teams Worldwide</h2>
+                <h2>Trusted by Architectural Teams Worldwide</h2>
                 <p>Hear from companies that transformed their sales process with Volume Architects.</p>
             </div>
             <div class="testimonials-grid">
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        "Volume Architects has revolutionized how our sales team operates. We've seen a 40% increase in conversion rates and reduced our follow-up time by 70%."
+                        "Volume Architects has revolutionized how our Architectural team operates. We've seen a 40% increase in accuracy and reduced our back job to 0%."
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">JD</div>
@@ -683,7 +683,7 @@
                 </div>
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        "The automation features saved us countless hours. Now we focus on building relationships instead of administrative tasks."
+                        "The automation features saved us countless hours. Now we focus on building relationships and key management decisions instead of administrative tasks."
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">SR</div>
@@ -713,7 +713,7 @@
     <section class="cta" id="contact">
         <div class="container">
             <div class="cta-content">
-                <h2>Ready to Transform Your Sales Process?</h2>
+                <h2>Ready to Transform Your Architectural Process?</h2>
                 <p>Join thousands of sales professionals who have increased their productivity with Volume Architects.</p>
                 <div class="cta-form">
                     <input type="email" placeholder="Enter your work email">
