--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			color: #fff;
 			min-height: 100vh;
 			display: flex;
-			align-items: center;  <!--align-items: flex-start;      /* vertical alignment at top */-->
+			align-items: center;  <!--align-items: flex-start;  -->    /* vertical alignment at top */
 			justify-content: flex-start;  /* horizontal alignment at left */
 			position: relative;
 			overflow: hidden;
