Add Marketing Banner

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header class="header">
         <div class="navbar">
             <a href="/" class="header__logo">
+                <!--<div class="logo__image">VA</div> -->
                 <img src="Images/14V.png" alt="Logo Description" class="custom_logo">			
                 <span class="logo__text">Volume Architects</span>
             </a>
@@ -31,6 +32,13 @@
             </ul>
         </div>
     </header>
+        <!-- Marketing Banner -->
+    <div class="marketing-banner">
+        <div class="marketing-text">
+            <i class="fas fa-gift"></i> Hurry!!! Check from time to time in order to see the latest offers.
+        </div>
+    </div>
+    
     <main class="main">
         <!-- Home Section -->
         <section class="home" id="home">
