--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volume Architects | Professional Architecture Services</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -18,8 +18,8 @@
                 <img src="Images/14V.png" alt="Logo Description" class="custom_logo">			
                 <span class="logo__text">Volume Architects</span>
             </a>
-            <button class="menu-toggle">
-                <i class="fas fa-bars"></i>
+            <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+                <span class="hamburger"></span>
             </button>
             <ul class="nav__links">
                 <li><a href="#home">HOME</a></li>
@@ -278,22 +278,22 @@
                     <button type="submit" class="btn btn-primary">Submit Request</button>
                 </form> -->
                 <!-- ...existing code... -->
-<form class="contact-form" id="contactForm" action="https://formspree.io/f/mqalvkgg" method="POST">
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" name="name" id="name" required>
-  </div>
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email" required>
-  </div>
-  <div class="form-group">
-    <label for="message">Message</label>
-    <textarea name="message" id="message" required></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary">Send Message</button>
-</form>
-<!-- ...existing code... -->
+                <form class="contact-form" id="contactForm" action="https://formspree.io/f/mqalvkgg" method="POST">
+                  <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" required></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Send Message</button>
+                </form>
+               
             </div>
         </div>
         </section>
